--- a/src/smartclass/ui/ProfessorUI.form
+++ b/src/smartclass/ui/ProfessorUI.form
@@ -173,6 +173,9 @@
             <Property name="snapToTicks" type="boolean" value="true"/>
             <Property name="value" type="int" value="23"/>
           </Properties>
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSlider1StateChanged"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
